--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,14 @@
         android:theme="@style/Theme.Agrosocial"
         tools:targetApi="31">
         <activity
-            android:name=".Login"
-            android:exported="false" >
-
-        </activity>
+            android:name=".NovaMsgActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false"></activity>
         <activity
             android:name=".Tela_entrada"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,9 +39,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false"></activity>
     </application>
 
 </manifest>
