--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,34 +17,37 @@
         tools:targetApi="31">
         <activity
             android:name=".CadastroAreaActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".NovaMsgActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
-            android:name=".Tela_entrada"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
             android:name=".Bem_vindo"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".TimelineActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".CadastroActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false" />
+            android:screenOrientation="portrait"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
