--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,33 +19,36 @@
         tools:targetApi="31">
         <activity
             android:name=".SobreActivity"
+            android:label="Sobre o app"
             android:exported="false" />
         <activity
             android:name=".CadastroAreaActivity"
+            android:label="Cadstro de áreas"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name=".NovaMsgActivity"
+            android:label="Nova mensagem"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name=".LoginActivity"
-            android:exported="false"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".Bem_vindo"
+            android:label="Login"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name=".TimelineActivity"
+            android:label="Timeline"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name=".CadastroActivity"
+            android:label="Cadastro"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
+            android:label="Tela principal"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
