change app name

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,8 +48,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
-            android:label="Tela principal"
             android:exported="true"
+            android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
