--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -18,33 +17,38 @@
         android:theme="@style/Theme.Agrosocial"
         tools:targetApi="31">
         <activity
+            android:name=".ReplyMsgActivity"
+            android:exported="false"
+            android:label="Responder"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".SobreActivity"
-            android:label="Sobre o app"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Sobre o app" />
         <activity
             android:name=".CadastroAreaActivity"
-            android:label="Cadstro de áreas"
             android:exported="false"
+            android:label="Cadstro de áreas"
             android:screenOrientation="portrait" />
         <activity
             android:name=".NovaMsgActivity"
-            android:label="Nova mensagem"
             android:exported="false"
+            android:label="Nova mensagem"
             android:screenOrientation="portrait" />
         <activity
             android:name=".LoginActivity"
-            android:label="Login"
             android:exported="false"
+            android:label="Login"
             android:screenOrientation="portrait" />
         <activity
             android:name=".TimelineActivity"
-            android:label="Timeline"
             android:exported="false"
+            android:label="Timeline"
             android:screenOrientation="portrait" />
         <activity
             android:name=".CadastroActivity"
-            android:label="Cadastro"
             android:exported="false"
+            android:label="Cadastro"
             android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
